# Sairch-Ingine

./: CMakeLists.txt  README.md
Scots_Tae_Inglis_An_Roushian_Leid_Translator/: CMakeLists.txt
Scots_Tae_Inglis_An_Roushian_Leid_Translator/include/: dictionarmanagement.h  translator.h
Scots_Tae_Inglis_An_Roushian_Leid_Translator/leids/: inglis_leid_dictionar.txt  roushian_leid_dictionar.txt  scots_leid_dictionar(auld).txt  scots_leid_dictionar.txt
Scots_Tae_Inglis_An_Roushian_Leid_Translator/src/: CMakeLists.txt  dictionarmanagement.cpp  main.cpp  translator.cpp
conflig/: config.json  requests.json
include/: converterjson.h  invertitindex.h  sairchserver.h
resoorces/: file0001.txt  file0002.txt
src/: CMakeLists.txt  converterjson.cpp  invertitindex.cpp  main.cpp  sairchserver.cpp
src/resoorces/: file0003.txt
tests/: CMakeLists.txt  test1.cpp  testinvindex.cpp  testsairch.cpp
